--- a/WpfApplication1/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/WpfApplication1/MainWindow.xaml
@@ -3,6 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="400" Width="600">
     <Grid>
-        
+        <Button Content="Button" Height="23" HorizontalAlignment="Left" Margin="28,23,0,0" Name="button1" VerticalAlignment="Top" Width="75" />
     </Grid>
 </Window>
