--- a/WpfApplication1/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/WpfApplication1/MainWindow.xaml
@@ -6,5 +6,6 @@
         <Button Content="Button" Height="23" HorizontalAlignment="Left" Margin="28,23,0,0" Name="button1" VerticalAlignment="Top" Width="75" />
         <Button Content="Button" Height="23" HorizontalAlignment="Left" Margin="28,64,0,0" Name="button2" VerticalAlignment="Top" Width="75" />
         <RadioButton Content="RadioButton" Height="16" HorizontalAlignment="Left" Margin="28,116,0,0" Name="radioButton1" VerticalAlignment="Top" />
+        <Label Content="TEST" Height="28" HorizontalAlignment="Left" Margin="28,273,0,0" Name="label1" VerticalAlignment="Top" />
     </Grid>
 </Window>
