--- a/WpfApplication1/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/WpfApplication1/MainWindow.xaml
@@ -7,5 +7,6 @@
         <Button Content="Button" Height="23" HorizontalAlignment="Left" Margin="28,64,0,0" Name="button2" VerticalAlignment="Top" Width="75" />
         <RadioButton Content="RadioButton" Height="16" HorizontalAlignment="Left" Margin="28,116,0,0" Name="radioButton1" VerticalAlignment="Top" />
         <TextBox Height="23" HorizontalAlignment="Left" Margin="28,168,0,0" Name="textBox1" VerticalAlignment="Top" Width="120" Text="TEST" />
+        <Label Content="테스트" Height="28" HorizontalAlignment="Left" Margin="33,291,0,0" Name="label1" VerticalAlignment="Top" />
     </Grid>
 </Window>
