동그라미 추가

--- a/WpfApplication1/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/WpfApplication1/MainWindow.xaml
@@ -8,5 +8,6 @@
         <RadioButton Content="RadioButton" Height="16" HorizontalAlignment="Left" Margin="28,116,0,0" Name="radioButton1" VerticalAlignment="Top" />
         <TextBox Height="23" HorizontalAlignment="Left" Margin="28,168,0,0" Name="textBox1" VerticalAlignment="Top" Width="120" Text="TEST" />
         <Label Content="MAIN" Height="28" HorizontalAlignment="Left" Margin="12,297,0,0" Name="label1" VerticalAlignment="Top" Width="252" />
+        <Ellipse Height="152" HorizontalAlignment="Left" Margin="184,31,0,0" Name="ellipse1" Stroke="Black" VerticalAlignment="Top" Width="164" />
     </Grid>
 </Window>
